adding profile pic

--- a/profile.html
+++ b/profile.html
@@ -24,7 +24,7 @@
          height: 100%;
          }
          .wrapper {
-         background-color: #E6E1C3;
+         background-color: #879CDF;
          padding-top: 100px;
          }
          body {
@@ -66,8 +66,8 @@
          display: flex;
          justify-content: center;
          flex-wrap: wrap;
-         background-color: #C1C72C;
-         color: black;
+         background-color: #FF8374;
+         color: white;
          padding: 10px;
          width: 95%;
          border-radius: 6px;
@@ -78,7 +78,7 @@
          border-radius: 50%;
          object-fit: cover;
          margin-top: -75px;
-         border: 6px solid #black;
+         border: 6px solid #FEE24C;
          box-shadow: rgba(0, 0, 0, 0.3) 4px 1px 20px 4px;
          }
          .photo-header h1, .photo-header h2 {
@@ -109,7 +109,6 @@
          padding-left: 100px;
          padding-right: 100px;
          }
-
          .row {
            display: flex;
            flex-wrap: wrap;
@@ -117,12 +116,11 @@
            margin-top: 20px;
            margin-bottom: 20px;
          }
-
          .card {
            padding: 20px;
            border-radius: 6px;
-           background-color: #C1C72C;
-           color: black;
+           background-color: #FF8374;
+           color: white;
            margin: 20px;
          }
          
@@ -130,13 +128,11 @@
          flex: 1;
          text-align: center;
          }
-
          a, a:hover {
          text-decoration: none;
          color: inherit;
          font-weight: bold;
          }
-
          @media print { 
           body { 
             zoom: .75; 
@@ -145,17 +141,14 @@
       </style>
       </head>
       <body>
-
-
+      <img src=https://avatars0.githubusercontent.com/u/53663056?v=4>
       <h1>
-      Hello my name is: Benjamin Lee Benson
+      Hello my name is: Peter
   </h1>
   
   <h3>
-      I am located: Houston, Tx
+      I am located: Redmond, WA
   </h3>
-
-
       </body>
       </html>      
       
