--- a/profile.html
+++ b/profile.html
@@ -24,7 +24,7 @@
          height: 100%;
          }
          .wrapper {
-         background-color: #879CDF;
+         background-color: #E6E1C3;
          padding-top: 100px;
          }
          body {
@@ -66,8 +66,8 @@
          display: flex;
          justify-content: center;
          flex-wrap: wrap;
-         background-color: #FF8374;
-         color: white;
+         background-color: #C1C72C;
+         color: black;
          padding: 10px;
          width: 95%;
          border-radius: 6px;
@@ -78,7 +78,7 @@
          border-radius: 50%;
          object-fit: cover;
          margin-top: -75px;
-         border: 6px solid #FEE24C;
+         border: 6px solid #black;
          box-shadow: rgba(0, 0, 0, 0.3) 4px 1px 20px 4px;
          }
          .photo-header h1, .photo-header h2 {
@@ -119,8 +119,8 @@
          .card {
            padding: 20px;
            border-radius: 6px;
-           background-color: #FF8374;
-           color: white;
+           background-color: #C1C72C;
+           color: black;
            margin: 20px;
          }
          
@@ -149,6 +149,17 @@
   <h3>
       I am located: Redmond, WA
   </h3>
+  <h3>
+  My GitHub profile is: https://github.com/peterboldyrev
+</h3>
+<ul>
+<li>User blog: </li>
+<li>User bio: null</li>
+<li>Number of public repositories: 19</li>
+<li>Number of followers: 0</li>
+<li>Number of users following: 0</li>
+
+</ul>
       </body>
       </html>      
       
